# MyCppProject

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
notes/: Socket.md
src/: main.cpp
src/client/: client.cpp  client.h
src/http/: http_handler.cpp  http_handler.h
src/server/: server.cpp  server.h  server_epoll.cpp  server_epoll.h  server_poll.cpp  server_poll.h  server_select.cpp  server_select.h
src/utils/: error_handler.cpp  error_handler.h
test/: hello-client.py  hello-server.py
